[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "gateway"
path = "src/gateway/main.rs"

[[bin]]
name = "auth"
path = "src/services/auth/main.rs"

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = "1.36.0"
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
