[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = "1.36.0"
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
